--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "@nomiclabs/hardhat-etherscan": "^2.1.6",
-    "@openzeppelin/contracts": "^3.4.2-solc-0.7",
+    "openzeppelin-contracts-V4": "npm:@openzeppelin/contracts@4.5",
     "hardhat": "^2.6.7"
   },
   "scripts": {
